styles.css
body {
  display: flex;
  flex-direction: column;
  align-items: center;
  margin: auto;
  width: 960px;
  font-size: 0px;
}

h1 {
  font-size: 48px;
  font-weight: 400;
  margin-bottom: 30px;
}

button.btn {
  font-weight: bold;
  margin-bottom: 30px;
  padding: 10px 20px;
  background-color: red;
  color: white;
  border: none;
  border-radius: 10px;
}

button.btn:hover {
  cursor: pointer;
  background-color: #ff0000c9;
}

.container {
  border: 1px solid black;
}

.square {
  width: 25px;
  height: 25px;
  border: 1px solid black;
  box-sizing: border-box;
  background-color: white;
  display: inline-block;
}

.filled-square {
  background-color: black;
}

